Fix navbar and add featured content

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 				class="u-header__section g-brd-bottom g-brd-gray-light-v4 g-py-18"
 			>
 				<div class="container">
-					<div class="row align-items-center">
+					<div class="row align-items-center justify-content-between">
 						<!-- Logo -->
 						<div class="col-md-3 g-hidden-md-down">
 							<a
 								href="bm-classic-home-page-1.html"
 								class="navbar-brand"
 							>
-								<img src="assets/img/logo.png" alt="Logo" />
+								<img src="assets/img/logo-cloudcomputing-id.png" alt="Logo" width="170px" />
 							</a>
 						</div>
 						<!-- End Logo -->
@@ -77,7 +77,7 @@
 								<input
 									class="form-control w-100 g-brd-secondary-light-v2 g-brd-primary--focus g-color-secondary-dark-v1 g-placeholder-secondary-dark-v1 g-bg-white g-font-weight-400 g-font-size-13 rounded g-px-20 g-py-12"
 									type="text"
-									placeholder="Search the entire site"
+									placeholder="Cari berita"
 								/>
 								<span
 									class="input-group-addon g-brd-none g-py-0 g-pr-0"
@@ -87,7 +87,7 @@
 										type="submit"
 									>
 										<span class="g-hidden-md-down"
-											>Search</span
+											>Cari</span
 										>
 										<i
 											class="g-hidden-lg-up fa fa-search"
@@ -97,73 +97,78 @@
 							</form>
 						</div>
 						<!-- End Subscribe Form -->
-
+						
 						<!-- Account -->
-						<div class="col-1 ml-auto">
-							<a
-								id="account-dropdown-invoker"
-								class="media align-items-center float-right g-text-underline--none--hover"
-								href="#"
-								aria-controls="account-dropdown"
-								aria-haspopup="true"
-								aria-expanded="false"
-								data-dropdown-event="hover"
-								data-dropdown-target="#account-dropdown"
-								data-dropdown-type="css-animation"
-								data-dropdown-duration="300"
-								data-dropdown-hide-on-scroll="false"
-								data-dropdown-animation-in="fadeIn"
-								data-dropdown-animation-out="fadeOut"
-							>
-								<div class="d-flex g-width-30 g-height-30 mr-2">
-									<img
-										class="img-fluid rounded-circle"
-										src="assets/img-temp/100x100/img11.jpg"
-										alt="Image Description"
-									/>
-								</div>
-								<div class="media-body">
-									<span
-										class="d-block g-hidden-sm-down g-color-main g-font-weight-600 g-font-size-13"
-										>Martin</span
-									>
-								</div>
-							</a>
+						<div class="col-3">
+							<a href="#" class="btn btn-md u-btn-outline-primary align-items-center float-right">Login</a>
 
-							<ul
-								id="account-dropdown"
-								class="list-unstyled text-right g-width-160 g-brd-around g-brd-secondary-light-v2 g-bg-white rounded g-pos-abs g-right-0 g-py-5 g-mt-57"
-								aria-labelledby="account-dropdown-invoker"
-							>
-								<li>
-									<a
-										class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20"
-										href="#"
-										>My Account</a
-									>
-								</li>
-								<li>
-									<a
-										class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20"
-										href="#"
-										>Notifications</a
-									>
-								</li>
-								<li>
-									<a
-										class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20"
-										href="#"
-										>Settings</a
-									>
-								</li>
-								<li>
-									<a
-										class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20"
-										href="#"
-										>Signout</a
-									>
-								</li>
-							</ul>
+							<!-- Ka -->
+							<!-- <div class="auth">
+								<a
+									id="account-dropdown-invoker"
+									class="media align-items-center float-right g-text-underline--none--hover"
+									href="#"
+									aria-controls="account-dropdown"
+									aria-haspopup="true"
+									aria-expanded="false"
+									data-dropdown-event="hover"
+									data-dropdown-target="#account-dropdown"
+									data-dropdown-type="css-animation"
+									data-dropdown-duration="300"
+									data-dropdown-hide-on-scroll="false"
+									data-dropdown-animation-in="fadeIn"
+									data-dropdown-animation-out="fadeOut"
+								>
+									<div class="d-flex g-width-30 g-height-30 mr-2">
+										<img
+											class="img-fluid rounded-circle"
+											src="assets/img-temp/100x100/img11.jpg"
+											alt="Image Description"
+										/>
+									</div>
+									<div class="media-body">
+										<span
+											class="d-block g-hidden-sm-down g-color-main g-font-weight-600 g-font-size-13"
+											>Martin</span
+										>
+									</div>
+								</a>
+	
+								<ul
+									id="account-dropdown"
+									class="list-unstyled text-right g-width-160 g-brd-around g-brd-secondary-light-v2 g-bg-white rounded g-pos-abs g-right-0 g-py-5 g-mt-57"
+									aria-labelledby="account-dropdown-invoker"
+								>
+									<li>
+										<a
+											class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20"
+											href="#"
+											>My Account</a
+										>
+									</li>
+									<li>
+										<a
+											class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20"
+											href="#"
+											>Notifications</a
+										>
+									</li>
+									<li>
+										<a
+											class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20"
+											href="#"
+											>Settings</a
+										>
+									</li>
+									<li>
+										<a
+											class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20"
+											href="#"
+											>Signout</a
+										>
+									</li>
+								</ul>
+							</div> -->
 						</div>
 						<!-- End Account -->
 					</div>
@@ -181,7 +186,7 @@
 							class="navbar-brand g-hidden-lg-up"
 							href="bm-classic-home-page-1.html"
 						>
-							<img src="assets/img/logo.png" alt="Logo" />
+							<img src="assets/img/logo-cloudcomputing-id.png" alt="Logo" width="170px" />
 						</a>
 						<!-- End Logo -->
 
@@ -209,92 +214,17 @@
 							id="navBar"
 						>
 							<ul class="navbar-nav g-font-weight-600">
-								<!-- Home - Submenu -->
-								<li
-									class="nav-item hs-has-sub-menu g-mr-10--lg g-mr-20--xl"
-								>
+								<!-- Main -->
+								<li class="nav-item g-mx-10--lg g-mx-20--xl">
 									<a
-										id="nav-link--home"
+										id="nav-link--pages"
 										class="nav-link text-uppercase g-color-primary--hover g-px-0"
-										href="#"
-										aria-haspopup="true"
-										aria-expanded="false"
-										aria-controls="nav-submenu--home"
+										href="../../index.html"
 									>
 										Home
 									</a>
-
-									<!-- Submenu -->
-									<ul
-										id="nav-submenu--home"
-										class="hs-sub-menu list-unstyled u-shadow-v11 g-min-width-220 g-brd-top g-brd-primary g-brd-top-2 g-mt-17"
-										aria-labelledby="nav-link--home"
-									>
-										<li
-											class="dropdown-item g-bg-secondary--hover"
-										>
-											<a
-												class="nav-link g-color-secondary-dark-v1"
-												href="bm-classic-home-page-1.html"
-												>Home Default</a
-											>
-										</li>
-										<li
-											class="dropdown-item g-bg-secondary--hover"
-										>
-											<a
-												class="nav-link g-color-secondary-dark-v1"
-												href="bm-classic-home-page-2.html"
-												>Home Option 2
-												<span
-													class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5"
-													>New</span
-												>
-											</a>
-										</li>
-										<li
-											class="dropdown-item g-bg-secondary--hover"
-										>
-											<a
-												class="nav-link g-color-secondary-dark-v1"
-												href="bm-classic-home-page-3.html"
-												>Home Option 3
-												<span
-													class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5"
-													>New</span
-												>
-											</a>
-										</li>
-										<li
-											class="dropdown-item g-bg-secondary--hover"
-										>
-											<a
-												class="nav-link g-color-secondary-dark-v1"
-												href="bm-classic-home-page-4.html"
-												>Home Option 4
-												<span
-													class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5"
-													>New</span
-												>
-											</a>
-										</li>
-										<li
-											class="dropdown-item g-bg-secondary--hover"
-										>
-											<a
-												class="nav-link g-color-secondary-dark-v1"
-												href="bm-classic-home-page-5.html"
-												>Home Option 5
-												<span
-													class="float-right u-label g-rounded-3 g-font-size-10 g-bg-lightred g-pos-rel g-top-minus-1 g-py-3 g-ml-5"
-													>New</span
-												>
-											</a>
-										</li>
-									</ul>
-									<!-- End Submenu -->
 								</li>
-								<!-- End Home - Submenu -->
+								<!-- End Main -->
 
 								<!-- Pages - Submenu -->
 								<li
@@ -340,7 +270,7 @@
 								</li>
 								<!-- End Pages - Submenu -->
 
-								<!-- Main -->
+								<!-- Video Link -->
 								<li class="nav-item g-mx-10--lg g-mx-20--xl">
 									<a
 										id="nav-link--pages"
@@ -350,7 +280,19 @@
 										Video
 									</a>
 								</li>
-								<!-- End Main -->
+								<!-- End Video Link -->
+
+								<!-- About Link -->
+								<li class="nav-item g-mx-10--lg g-mx-20--xl">
+									<a
+										id="nav-link--pages"
+										class="nav-link text-uppercase g-color-primary--hover g-px-0"
+										href="../../index.html"
+									>
+										About
+									</a>
+								</li>
+								<!-- End About Link -->
 							</ul>
 						</div>
 						<!-- End Navigation -->
@@ -361,7 +303,161 @@
 		<!-- End Header -->
 
 		<!-- Main Content -->
-		<main></main>
+		<main>
+			<!-- Promo Block -->
+			<section class="g-py-50">
+					<div class="container">
+					  <!-- News Section -->
+					  <div class="row no-gutters">
+						<div class="col-lg-6 g-pr-1--lg g-mb-30 g-mb-2--lg">
+						  <!-- Article -->
+						  <article class="u-block-hover">
+							<figure class="u-shadow-v25 g-bg-cover g-bg-white-gradient-opacity-v1--after">
+							  <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/430x270/img1.jpg" alt="Image Description">
+							</figure>
+			
+							<span class="g-hidden-xs-down u-icon-v3 u-icon-size--sm g-font-size-13 g-bg-white rounded-circle g-pos-abs g-top-30 g-right-30">
+							  <i class="icon-camera"></i>
+							</span>
+			
+							<span class="g-hidden-xs-down g-pos-abs g-top-30 g-left-30">
+							  <a class="btn btn-xs u-btn-darkpurple text-uppercase rounded-0" href="#">Painting</a>
+							</span>
+			
+							<div class="g-pos-abs g-bottom-30 g-left-30 g-right-30">
+							  <small class="g-color-white">
+								<i class="icon-clock g-pos-rel g-top-1 g-mr-2"></i> July 8, 2016
+							  </small>
+			
+							  <h3 class="h4 g-my-10">
+								<a class="g-color-white g-color-white--hover" href="#">Our goal is to be the next billion company. In order to do that, we should work hard.</a>
+							  </h3>
+			
+							  <ul class="g-hidden-xs-down u-list-inline g-font-size-12 g-color-white">
+								<li class="list-inline-item">
+								  <i class="icon-eye g-pos-rel g-top-1 g-mr-2"></i> 264
+								</li>
+								<li class="list-inline-item">/</li>
+								<li class="list-inline-item">
+								  <i class="icon-finance-206 u-line-icon-pro align-middle g-pos-rel g-top-1 g-mr-2"></i> 52
+								</li>
+								<li class="list-inline-item">/</li>
+								<li class="list-inline-item">
+								  <i class="icon-share g-pos-rel g-top-1 g-mr-2"></i> 26
+								</li>
+							  </ul>
+							</div>
+						  </article>
+						  <!-- End Article -->
+						</div>
+			
+						<div class="col-lg-6 g-pl-1--lg g-mb-30 g-mb-2--lg">
+						  <!-- Article -->
+						  <article class="u-block-hover">
+							<figure class="u-shadow-v25 g-bg-cover g-bg-white-gradient-opacity-v1--after">
+							  <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/430x270/img2.jpg" alt="Image Description">
+							</figure>
+			
+							<span class="g-hidden-xs-down u-icon-v3 u-icon-size--sm g-font-size-13 g-bg-white rounded-circle g-pos-abs g-top-30 g-right-30">
+							  <i class="fa fa-play g-left-2"></i>
+							</span>
+			
+							<span class="g-hidden-xs-down g-pos-abs g-top-30 g-left-30">
+							  <a class="btn btn-xs u-btn-red text-uppercase rounded-0" href="#">Startup</a>
+							</span>
+			
+							<div class="g-pos-abs g-bottom-30 g-left-30 g-right-30">
+							  <small class="g-color-white">
+								<i class="icon-clock g-pos-rel g-top-1 g-mr-2"></i> July 22, 2016
+							  </small>
+			
+							  <h3 class="h4 g-my-10">
+								<a class="g-color-white g-color-white--hover" href="#">Why your customer support is very important? Learn the next 10 best tips.</a>
+							  </h3>
+			
+							  <ul class="g-hidden-xs-down u-list-inline g-font-size-12 g-color-white">
+								<li class="list-inline-item">
+								  <i class="icon-eye g-pos-rel g-top-1 g-mr-2"></i> 127
+								</li>
+								<li class="list-inline-item">/</li>
+								<li class="list-inline-item">
+								  <i class="icon-finance-206 u-line-icon-pro align-middle g-pos-rel g-top-1 g-mr-2"></i> 152
+								</li>
+								<li class="list-inline-item">/</li>
+								<li class="list-inline-item">
+								  <i class="icon-share g-pos-rel g-top-1 g-mr-2"></i> 32
+								</li>
+							  </ul>
+							</div>
+						  </article>
+						  <!-- End Article -->
+						</div>
+			
+						<div class="col-lg-4 g-pr-1--lg g-mb-30 g-mb-0--lg">
+						  <!-- Article -->
+						  <article class="u-block-hover">
+							<figure class="u-shadow-v25 u-bg-overlay g-bg-white-gradient-opacity-v1--after">
+							  <img class="u-block-hover__main--zoom-v1 img-fluid" src="assets/img-temp/400x270/img2.jpg" alt="Image Description">
+							</figure>
+			
+							<div class="w-100 text-center g-absolute-centered g-px-30">
+							  <a class="btn btn-xs u-btn-cyan text-uppercase rounded-0" href="#">Spa</a>
+							  <h3 class="h4 g-mt-10">
+								<a class="g-color-white" href="#">Be ready, fashion of the year is coming this year</a>
+							  </h3>
+							  <small class="g-color-white">
+								<i class="icon-clock g-pos-rel g-top-1 g-mr-2"></i> July 26, 2017
+							  </small>
+							</div>
+						  </article>
+						  <!-- End Article -->
+						</div>
+			
+						<div class="col-lg-4 g-px-1--lg g-mb-30 g-mb-0--lg">
+						  <!-- Article -->
+						  <article class="u-block-hover">
+							<figure class="u-shadow-v25 u-bg-overlay g-bg-white-gradient-opacity-v1--after">
+							  <img class="u-block-hover__main--zoom-v1 img-fluid" src="assets/img-temp/400x270/img1.jpg" alt="Image Description">
+							</figure>
+			
+							<div class="w-100 text-center g-absolute-centered g-px-30">
+							  <a class="btn btn-xs u-btn-pink text-uppercase rounded-0" href="#">Fashion</a>
+							  <h3 class="h4 g-mt-10">
+								<a class="g-color-white" href="#">Must be visited places in the USA - Florida Beaches</a>
+							  </h3>
+							  <small class="g-color-white">
+								<i class="icon-clock g-pos-rel g-top-1 g-mr-2"></i> July 18, 2017
+							  </small>
+							</div>
+						  </article>
+						  <!-- End Article -->
+						</div>
+			
+						<div class="col-lg-4 g-pl-1--lg">
+						  <!-- Article -->
+						  <article class="u-block-hover">
+							<figure class="u-shadow-v25 u-bg-overlay g-bg-white-gradient-opacity-v1--after">
+							  <img class="u-block-hover__main--zoom-v1 img-fluid" src="assets/img-temp/400x270/img17.jpg" alt="Image Description">
+							</figure>
+			
+							<div class="w-100 text-center g-absolute-centered g-px-30">
+							  <a class="btn btn-xs u-btn-primary text-uppercase rounded-0" href="#">Tech</a>
+							  <h3 class="h4 g-mt-10">
+								<a class="g-color-white" href="#">Why your next glass of juice will cost you more</a>
+							  </h3>
+							  <small class="g-color-white">
+								<i class="icon-clock g-pos-rel g-top-1 g-mr-2"></i> July 5, 2017
+							  </small>
+							</div>
+						  </article>
+						  <!-- End Article -->
+						</div>
+					  </div>
+					  <!-- News Section -->
+					</div>
+				  </section>
+				  <!-- End Promo Block -->
+		</main>
 		<!-- End Main Content -->
 
 		<!-- Footer -->
